--- a/style-loginv2.css
+++ b/style-loginv2.css
@@ -35,6 +35,7 @@ body{
   align-items:center;
   justify-content:center;
   text-align:center;
+  font-family:'Josefin Sans', sans-serif;
 }
 
 .card-body p{
