--- a/Estilo.css
+++ b/Estilo.css
@@ -161,125 +161,216 @@ header ul li a
     background: darksalmon;
     clip-path: circle(600px at right 800px);
 }
+:root {
+  --home-bg-color: #f2f3ee;
+  --menu-bg-color: #cbcbc2;
+  --silde-btn-border: #808080;
+  --slide-btn-bg: #ddf2db;
+  --slide-btn-hoverbg: #f1fff1;
+  --alpha-green: rgba(33, 96, 47, 0.51);
+  --icon-hover-color: #344a39;
+  --icon-hover-bg: #709680;
+  --text-color: #616161;
+  --border-color: #709680;
+  --heading-color: #344a39;
+  --box-shadow-color: #b5b5ac;
+  --lightest-green: #86a58d;
+  --light-green: #9ab09a;
+  --dark-green: rgba(52, 74, 57, 0.86);
+  --box-shadow: 0px 0px 3px 5px var(--box-shadow-color);
+  --border-radius: 60px 5px;
+  --fade-green: rgba(57, 87, 64, 0.55);
+}
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+body,
+html {
+  width: 100%;
+  font-size: 10px;
+  color: var(--text-color);
+  font-weight: normal;
+  font-family: sans-serif;
+  background-color: var(--home-bg-color);
+}
 
-
-/*aaaa*/
-.logo {
-    height: 100%;
-  }
-  .nav {
-    display: flex;
-    align-items: center;
-    background: #F0B9A6;
-    height: 5.5rem;
-    padding: 0 1em 0 1em;
-    /* Feel free to use a different font */
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.1em;
-    flex: 0.5;
-    box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
-  }
-  
-  .nav ul {
-    display: flex;
-    list-style: none;
-    height: 100%;
-    justify-content: end;
-    align-items: center;
-    flex: 1;
-  }
-  
-  .nav .item {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 100%;
-  }
-  
-  .nav a {
-    text-decoration: none;
-    color: white;
-    height: 100%;
-    text-transform: uppercase;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 25px 0 25px;
-    transition: 0.1s;
-    white-space: nowrap;
-  }
-  
-  .nav a:hover {
-    background-color: burlywood;
-    transition: 0.1s;
-  }
-  /* Icon padding */
-  .nav a i {
-    margin-right: 10px;
-  }
-  
-  /* Denotes the active menu item */
-  .active {
-    background-color:#F5D0C3;
-    transition: 0.1s;
-  }
-  
-  /* Mobile Menu Toggle */
-  .toggle {
-    display: none;
-    position: fixed;
-    top: 34px;
-    right: 30px;
-    color: white;
-    font-size: 1.1em;
-    background-color: none;
-    cursor: pointer;
-    pointer-events: auto;
-  }
-  
-  /* Animation Easing */
-  .animatedtoggle {
-    transition: all 0.1s ease;
-  }
-  /* Rotate Menu item on toggle*/
-  .rotate {
-    transform: rotate(90deg);
-    transition: all 0.2s ease-in-out;
-  }
-  
-  /* Mobile menu breakpoint */
-  @media screen and (max-width: 950px) {
-    .menu {
-      display: block;
-    }
-    .nav {
-      display: block;
-      height: fit-content;
-    }
-  
-    .nav ul {
-      display: block;
-      margin-top: 1em;
-      padding-bottom: 1em;
-    }
-    .nav ul .item {
-      display: block;
-    }
-    .logo {
-      height: 88px;
-    }
-    .nav a {
-      height: 60px;
-      justify-content: start;
-    }
-    /* Display the toggle */
-    .toggle {
-      display: block;
-      background-color: transparent;
-      border: none;
-    }
-    /* Hide the primary nav */
-    ul.inactive {
-      display: none;
-    }
-  }
+#ham-menu {
+  display: none;
+}
+label[for="ham-menu"] {
+  display: block;
+  position: fixed;
+  top: 24px;
+  left: 20px;
+  z-index: 999;
+  width: 60px;
+  height: 60px;
+  background-color: var(--home-bg-color);
+  border-radius: 15px;
+  border: 2px solid var(--border-color);
+}
+.ham-menu {
+  width: 50vw;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  visibility: hidden;
+  transform: translate(-110%);
+  z-index: 998;
+  background-color: var(--lightest-green);
+  transition: 1s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ham-menu > ul {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  padding: 20px;
+  height: 50%;
+}
+.ham-menu > ul > li {
+  font-size: 5rem;
+  white-space: nowrap;
+  letter-spacing: 0.15em;
+  cursor: pointer;
+  color: rgb(97, 97, 97);
+}
+#ham-menu:checked + label {
+  background-color: transparent;
+  border-color: var(--dark-green);
+}
+#ham-menu:checked ~ div.ham-menu {
+  transform: translate(0px);
+  visibility: visible;
+}
+.full-page-green {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark-green);
+  z-index: 997;
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+  transition: 500ms;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+#ham-menu:checked ~ div.full-page-green {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+[for="ham-menu"] > div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
+  align-items: center;
+}
+.menu-line {
+  display: block;
+  width: 17px;
+  height: 2px;
+  margin: 10px 0 5px;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+  background-color: var(--border-color);
+  transition: 500ms;
+  transform-origin: right center;
+}
+[for="ham-menu"] > div > span:nth-child(4),
+[for="ham-menu"] > div > span:nth-child(5),
+[for="ham-menu"] > div > span:nth-child(6) {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+  transform-origin: left center;
+}
+#ham-menu:checked + label span {
+  background-color: var(--dark-green);
+}
+#ham-menu:checked + label span:nth-child(2),
+#ham-menu:checked + label span:nth-child(5) {
+  transform: scale(0);
+}
+#ham-menu:checked + label span:nth-child(1) {
+  transform: translateY(17px) rotate(45deg);
+}
+#ham-menu:checked + label span:nth-child(4) {
+  transform: translateY(17px) rotate(-45deg);
+}
+#ham-menu:checked + label span:nth-child(3) {
+  transform: translateY(-17px) rotate(-45deg);
+}
+#ham-menu:checked + label span:nth-child(6) {
+  transform: translateY(-17px) rotate(45deg);
+}
+p {
+  display: inline;
+  font-size: 1.8rem;
+  line-height: 1.5em;
+  word-spacing: 0.5em;
+  letter-spacing: 0.1em;
+  font-family: "OpenSansCondensed-Light";
+}
+a {
+  font-size: 1.6rem;
+  line-height: 1.5em;
+  word-spacing: 0.5em;
+  letter-spacing: 0.1em;
+  font-family: "OpenSansCondensed-Light";
+  display: inline;
+  font-weight: bold;
+  padding: 7px;
+  color: var(--icon-hover-bg);
+}
+a::after {
+  content: "\e806";
+  display: inline-block;
+  font-family: fontello;
+  padding: 5px;
+  font-size: 1.6rem;
+  transform: rotate(-90deg);
+}
+.text {
+  font-size: 2.5rem;
+  line-height: 1.5em;
+  word-spacing: 0.5em;
+  letter-spacing: 0.1em;
+  font-family: "OpenSansCondensed-Bold", sans-serif;
+}
+.title {
+  font-size: 3rem;
+  line-height: 1.5em;
+  word-spacing: 0.5em;
+  letter-spacing: 0.1em;
+  font-family: "OpenSansCondensed-Bold", sans-serif;
+  color: var(--icon-hover-bg);
+  padding: 10px;
+}
+.heading {
+  font-size: 6rem;
+  line-height: 1.5em;
+  word-spacing: 0.5em;
+  letter-spacing: 0.1em;
+  font-family: "Patua One";
+}
+.centre-text {
+  text-align: center;
+}
+.bold-text {
+  font-weight: bold;
+}
