--- a/navbar.css
+++ b/navbar.css
@@ -1,42 +1,53 @@
-/* Underline Effect*/
-.nav-item {
-    position: relative;
+@import url(https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800);
+
+html, body {
+  font-family: 'Dosis';
+  font-weight: 300;
+}
+
+.header {
+  width: 100%;
+  border-bottom: 1px solid black;
+  text-align: right;
+  position: relative;
+  
+.logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 32px;
+    font-weight: 100;
+    padding: 26px;
+    border-right: 1px solid black;
+  }
+}
+
+.link {
+  display: inline-block;
+  padding: 15px 0;
+  margin: 15px 25px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #0f0f0f;
+  font-weight: 800;
+  font-size: 24px;
+  
+  .bar {
+    width: 100%;
+    display: inline-block;
+    border-bottom: 5px solid black;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    transition: all 300ms;
   }
   
-  .navbar-collapse ul li a.nav-link:before {
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      background: transparent;
-      content: '';
-      opacity: 0;
-      -ms-transition: opacity 0.3s, -webkit-transform 0.3s;
-      -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-      transition: opacity 0.3s, transform 0.3s;
-      -ms-transform: translateY(10px);
-      -webkit-transform: translateY(10px);
-      transform: translateY(10px);
-  }
-  
-  .navbar-collapse ul li:hover a.nav-link:before {
+  &:hover {
+    .bar {
       opacity: 1;
-      -ms-transform: translateY(0px);
-      -webkit-transform: translateY(0px);
-      transform: translateY(0px);
-      bottom: 0px;
-      background: #dd4343;
+      bottom: 5px;
+    }
   }
-  
-  .dropdown-item:hover, .dropdown-item:focus {
-      color: #ffffff;
-      text-decoration: none;
-      background-color: #dd4343;
-  }
-  
-  .dropdown-menu {
-    border: 0px;
-  }
-  
-  
+}
