--- a/perfil-estilo.css
+++ b/perfil-estilo.css
@@ -1,5 +1,5 @@
 body{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+    background: -webkit-angular-gradient(left, #ffffff, #c0c0c0);
 }
 .emp-profile{
     padding: 3%;
