--- a/navbar.css
+++ b/navbar.css
@@ -10,7 +10,7 @@ html, body {
   border-bottom: 1px solid black;
   text-align: right;
   position: relative;
-  
+}
 .logo {
     position: absolute;
     top: 0;
@@ -20,7 +20,7 @@ html, body {
     padding: 26px;
     border-right: 1px solid black;
   }
-}
+
 
 .link {
   display: inline-block;
@@ -32,7 +32,7 @@ html, body {
   color: #0f0f0f;
   font-weight: 800;
   font-size: 24px;
-  
+}
   .bar {
     width: 100%;
     display: inline-block;
@@ -44,10 +44,8 @@ html, body {
     transition: all 300ms;
   }
   
-  &:hover {
-    .bar {
+  .bar:hover {
       opacity: 1;
       bottom: 5px;
-    }
   }
-}
+
