--- a/style-shipping.css
+++ b/style-shipping.css
@@ -14,7 +14,7 @@
 
 html {
   font-family: "Inter", sans-serif !important;
-  font-size: 14px !important;
+  font-size: 16px !important;
   box-sizing: border-box !important;
 }
 
@@ -26,6 +26,10 @@ html {
 
 body {
   margin: 0 !important;
+  background:linear-gradient(to right, #ffdde1, rgb(238, 236, 235), #a7bfe8, #6190e8);
+  background-size:500% 500%;
+  transition:background 3s ease;
+  background-position:50% 50%
 }
 
 h1 {
@@ -33,7 +37,8 @@ h1 {
 }
 
 p {
-  color: #ebc09d;
+  font-size: 1rem;
+  color: #134899;
 }
 
 hr {
@@ -67,7 +72,7 @@ hr {
 
 .field__label {
   color: var(--color-gray);
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   font-weight: 300;
   text-transform: uppercase;
   margin-bottom: 0.25rem
